# 3d-model-viewer

./: CMakeLists.txt  README.md
src/: main.cpp
src/analyzer/: MeshQualityAnalyzer.h
src/renders/: ModelRenderer.h  OpenGLWindow.h
